<resources>
    <string name="app_name">Course Scheduler</string>
    <string name="terms">Terms</string>
    <string name="courses">Courses</string>
    <string name="assessments">Assessments</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="add_term">Add Term</string>
    <string name="add_course">Add Course</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="all_terms">All Terms</string>
    <string name="term_name">Term Name</string>
    <string name="term_dates">Term Dates</string>
    <string name="term_actions">Term Actions…</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="term_info">Term Info</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit_term">Edit Term</string>
    <string name="submit">Submit</string>
    <string name="blank_field">Please enter a %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>